public/stylesheets/jumbotron.css.scss
/* Defines CSS rules for Jumbotron Class */

.jumbotron {
  position: relative;
  padding: 20px 0;
  color: #fff;
  text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
  
  h1 {
    font-family: 'museo500';
    font-size: 3.7em;
    font-weight: normal;
    line-height: 1;
    margin-top: 40px;
    margin-bottom: 42px;
    text-align: center;
  }

  a, a:hover {
    color: inherit;
  }

  a.list-info {
    color: #636363;
  }
  
  .container {
    position: relative;
    z-index: 2;

    .info-bloc {
      min-height: 300px;
      color: #8d8d8d;
      text-shadow: none;
      line-height: 1.8em;
      background-color: #FFFFFF;
      background-repeat: no-repeat;
      background-position: 90% 102%;
      @include border-radius(4px);
      @include box-shadow(inset 0 0 6px #8D8D8D);

      .bloc-title {
        display: block;
        font-weight: bold;
        margin-bottom: 10px;
      }

      .bloc-section-title {
        display: block;
        padding-left: 25px;
        text-decoration: underline;
      }

      .bloc-section-description {
        display: block;
        margin-bottom: 8px;
      }
    }

    .list-info {
      line-height: 21px;
      display: inline-block;
      height: 21px;
      padding-left: 2em;
      margin-bottom: 1em;
    }

    .list-info-medium {
      font-size: 1.1em;
      line-height: 32px;
      display: inline-block;
      height: auto;
      padding-left: 2.8em;
      margin-bottom: 10px;

      img {
        vertical-align: -37%;
        margin-left: 5px;
      }
    }

    .medium-img {
      img {
        width: 50px;
        height: 50px;
      }
    }
  }
}

.jumbotron:after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: .4;
}

@media (max-width: 980px) {
  .jumbotron {
    .container {
      .list-info-medium {
        font-size: 1em;
        line-height: 28px;
        background-size: 25px;
      }

      .medium-img {
        width: 45px;
        height: 45px;
      }
    }
  }
}

@media (min-width: 768px) and (max-width: 980px) {
  .jumbotron {
    margin-top: -20px; /* Offset bottom margin on .navbar */
    
    h1 {
      font-size: 3em;
      margin-top: 20px;
      margin-bottom: 32px;
    }

    .container {
      .info-bloc {
        font-size: 0.9em;

        .bloc-section-title { background-size: 16px 15px; }
        .bloc-section-description { line-height: 1.5em; }
      }

      .list-info {
        font-size: 0.9em;
        height: auto;
        line-height: 18px;
        margin-bottom: 10px;
        background-size: 17px 17px;
      }
    }
  }
}

@media (max-width: 767px) {
  .jumbotron {
    padding: 20px;
    margin-top: -20px; /* Offset bottom margin on .navbar */
    
    h1 {
      font-size: 2.8em;
      margin-top: 15px;
      margin-bottom: 25px;
    }

    .container {
      .info-bloc {
        font-size: 0.9em;
        margin-bottom: 10px;
        min-height: inherit;
      }
    }
  }
}

@media (max-width: 480px) {
  .jumbotron {
    padding: 0;
    
    h1 {
      font-size: 2.3em;
      margin-top: 29px;
      margin-bottom: 30px;
    }
    
    p, .btn-huge {
      font-size: 20px;
    }
  }
}

